--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             <img src="src/img/NossosServiços/Makes/MakeDebuntatne.jpg" alt="Recurso 1">
           </div>
           <div class="legenda">
-            <h2> Maquiagem Debutantes </h2>
+            <h2> Maquiagem para Debutantes </h2>
           </div>
         </div>
 
@@ -394,7 +394,7 @@
             <img src="src/img/GaleriaDeTrabalhos/img5.jpg" alt="Recurso 1">
           </div>
           <div class="legenda">
-            <h2> Idratação e Escova </h2>
+            <h2> Hidratação e Escova </h2>
           </div>
         </div>
       </div>
