Atualização de nomeclatura

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <img src="src/img/NossosServiços/DesignerSombrancelha.jpg" alt="Recurso 1">
           </div>
           <div class="legenda">
-            <h2> Designer de <br> Sombrancelhas </h2>
+            <h2> Designer de <br> Sobrancelhas </h2>
           </div>
         </div>
 
@@ -287,7 +287,7 @@
             <img src="src/img/NossosServiços/Makes/MakeArtistic.jpg" alt="Recurso 1">
           </div>
           <div class="legenda">
-            <h2> Maquiagem Artítica </h2>
+            <h2> Maquiagem Artística </h2>
           </div>
         </div>
 
@@ -495,7 +495,7 @@
 
   </div>
   <footer>
-    <p>&copy; 2023 Ornare Hair. E-mail: yedalimake@gmail.com Contato Telefone / WhatsApp: (61) 9 8439-8996</p>
+    <p>&copy; 2023 Ornare Hair. E-mail: yedalimake@gmail.com Telefone / WhatsApp: (61) 9 8439-8996</p>
   </footer>
 
   <!-- Inclua a biblioteca Smooth Scroll -->
