Autalização de número

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
   <div class="whatsapp-bar">
     <div class="contato">
-      <a href="https://api.whatsapp.com/send?phone=61992144749" target="_blank">
+      <a href="https://api.whatsapp.com/send?phone=61999924368" target="_blank">
         <img src="src/img/wh3.png" alt="WhatsApp">
         <span>WhatsApp</span>
       </a>
-      <a href="tel:61992144740" target="_blank">
+      <a href="tel:61999924368" target="_blank">
         <img src="src/img/tel2.png" alt="WhatsApp">
         <span>Ligue</span>
       </a>
@@ -59,7 +59,7 @@
           <h1 style="color: rgb(196, 10, 10);"> ORNARE HAIR </h1>
         </div>
 
-        <a class="cta-button" href="https://api.whatsapp.com/send?phone=61992144749"> Agende seu Horário </a>
+        <a class="cta-button" href="https://api.whatsapp.com/send?phone=61999924368"> Agende seu Horário </a>
       </div>
     </section>
 
@@ -302,7 +302,7 @@
         
       </div>
 
-      <a class="cta-button" href="https://api.whatsapp.com/send?phone=61992144749"> Agende seu Horário</a>
+      <a class="cta-button" href="https://api.whatsapp.com/send?phone=61999924368"> Agende seu Horário</a>
 
     </section>
 
@@ -342,7 +342,7 @@
         </div>
       </div>
 
-      <a class="cta-button" href="https://api.whatsapp.com/send?phone=61992144749"> Agende seu Horário</a>
+      <a class="cta-button" href="https://api.whatsapp.com/send?phone=61999924368"> Agende seu Horário</a>
 
     </section>
 
@@ -399,7 +399,7 @@
         </div>
       </div>
 
-      <a class="cta-button" href="https://api.whatsapp.com/send?phone=61992144749"> Agende seu Horário</a>
+      <a class="cta-button" href="https://api.whatsapp.com/send?phone=61999924368"> Agende seu Horário</a>
 
     </section>
 
@@ -442,7 +442,7 @@
       </div>
 
       <div class="btn">
-        <a class="cta-button" href="https://api.whatsapp.com/send?phone=61992144749"> Agende seu Horário</a>
+        <a class="cta-button" href="https://api.whatsapp.com/send?phone=61999924368"> Agende seu Horário</a>
       </div>
 
     </section>
@@ -495,7 +495,7 @@
 
   </div>
   <footer>
-    <p>&copy; 2023 Ornare Hair. E-mail: yedalimake@gmail.com Telefone / WhatsApp: (61) 9 8439-8996</p>
+    <p>&copy; 2023 Ornare Hair. E-mail: yedalimake@gmail.com Telefone / WhatsApp: (61) 9 99924368</p>
   </footer>
 
   <!-- Inclua a biblioteca Smooth Scroll -->
